# asumpi

./: Cargo.toml  README.md  lessons_learned.md  new_experiments.md  requests.md  results.json  summary.md
.github/: copilot-instructions.md
examples/: schnorr.rs
src/: analysis.rs  eval.rs  language.rs  lib.rs  main.rs  rules.rs  value.rs
tests/: algebraic_laws.proptest-regressions  algebraic_laws.rs  property_tests.proptest-regressions  property_tests.rs
tests/common/: mod.rs
