[package]
name = "ark-wasm-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
egg = "0.9"
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[[bin]]
name = "ark_wasm_demo"
path = "src/main.rs"
